Chore: Replace `Collections.singletonList` with `List.of` and remove unused imports in tokenizer and sequence folding classes