@@ -22,7 +22,6 @@ import org.pageseeder.diffx.token.impl.IgnorableSpaceToken;
 import org.pageseeder.diffx.token.impl.SpaceToken;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -64,21 +63,21 @@ public final class TokenizerByText implements TextTokenizer {
     // no leading or trailing spaces return a singleton in all configurations
     if (x == 0 && y == 0) {
       TextToken token = new CharactersToken(text);
-      return Collections.singletonList(token);
+      return List.of(token);
     }
     // The text node is only white space (white space = leading space)
     if (x == text.length()) {
       switch (this.whitespace) {
         case COMPARE:
-          return Collections.singletonList(SpaceToken.getInstance(text.toString()));
+          return List.of(SpaceToken.getInstance(text.toString()));
         case PRESERVE:
-          return Collections.singletonList(new IgnorableSpaceToken(text.toString()));
+          return List.of(new IgnorableSpaceToken(text.toString()));
         case IGNORE:
           return List.of();
         default:
       }
       TextToken token = new CharactersToken(text);
-      return Collections.singletonList(token);
+      return List.of(token);
     }
     // some trailing or leading whitespace, behaviour changes depending on whitespace processing
     List<TextToken> tokens = null;
@@ -105,7 +104,7 @@ public final class TokenizerByText implements TextTokenizer {
         break;
       case IGNORE:
         TextToken token = new CharactersToken(text.subSequence(x, text.length() - y));
-        tokens = Collections.singletonList(token);
+        tokens = List.of(token);
         break;
       default:
     }
